--- a/view/LayerSelector.html
+++ b/view/LayerSelector.html
@@ -52,7 +52,7 @@ var activeTableTab = "activeTableTab";
 <li>Next&nbsp;Class</li>
 </ul>
 <ul class="navList">
-<li><a href="../index.html?view/LayerSelector.html" target="_top">Frames</a></li>
+<li><a href="../index.html?main.view/LayerSelector.html" target="_top">Frames</a></li>
 <li><a href="LayerSelector.html" target="_top">No&nbsp;Frames</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_top">
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">view</div>
+<div class="subTitle">main.view</div>
 <h2 title="Class LayerSelector" class="title">Class LayerSelector</h2>
 </div>
 <div class="contentContainer">
@@ -99,7 +99,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>view.LayerSelector</li>
+<li>main.view.LayerSelector</li>
 </ul>
 </li>
 </ul>
@@ -288,7 +288,7 @@ implements java.awt.event.KeyListener</pre>
 <li>Next&nbsp;Class</li>
 </ul>
 <ul class="navList">
-<li><a href="../index.html?view/LayerSelector.html" target="_top">Frames</a></li>
+<li><a href="../index.html?main.view/LayerSelector.html" target="_top">Frames</a></li>
 <li><a href="LayerSelector.html" target="_top">No&nbsp;Frames</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_bottom">
